--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,22 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
+<header class="p-3 text-bg-dark">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        </a>
 
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><%= link_to 'Home', root_path, class: 'nav-link px-2 text-secondary' %></li>
+          <li><%= link_to 'Filmes', movies_path, class: 'nav-link px-2 text-white' %></li>
+          <li><%= link_to 'Diretores', directors_path, class: 'nav-link px-2 text-white' %></li>
+          <li><%= link_to 'Gêneros', genres_path, class: 'nav-link px-2 text-white' %></li>
+        </ul>
+      </div>
+    </div>
+  </header>
   <body>
     <%= yield %>
   </body>
